Fix CSS overflow issue and adjust padding in GridFeatured component

--- a/app/globals.css
+++ b/app/globals.css
@@ -284,3 +284,9 @@ mux-player {
     max-width: 1660px !important;
   }
 }
+
+body {
+    overflow-x: hidden;
+      /* Hide horizontal scrollbar */
+  /* Hide scrollbars */
+}
